examples/failing/InvalidDerivedInstance2.purs
-- @shouldFailWith ExpectedTypeConstructor
module Main where

import Prelude

derive instance eqRecord :: Eq {}
